--- a/app/views/index/hakkimizda.html.erb
+++ b/app/views/index/hakkimizda.html.erb
@@ -161,11 +161,11 @@
 					<br>
 
 					<p>
-						Developers: <a href="mailto:onurdemirtas91@gmail.com">Onur</a> &amp; <a
-						href="mailto:oguz.tanrikulu@metu.edu.tr">Oğuz</a>
+						Developers: <a href="mailto:onurdemirtas91@gmail.com">Onur DEMİRTAŞ</a> &amp; <a
+						href="mailto:oguz.tanrikulu@metu.edu.tr">Oğuz TANRIKULU</a>
 					</p>
 					
-					İletişim: <a href="mailto:iletisim@campusilan.com">iletisim@campusilan.com</a> <br>
+					İletişim: <a href="mailto:info@campusilan.com">info@campusilan.com</a> <br> 
 					Veya <a href="/iletisim" >buraya</a> tıklayınız.
 
 				</div>
