--- a/app/views/index/iletisim.html.erb
+++ b/app/views/index/iletisim.html.erb
@@ -191,15 +191,28 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="g-recaptcha col-md-6 col-xs-12" data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
+									<div style="overflow:auto;" class="g-recaptcha col-md-6 " data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
 									
-									<button type="submit" class="btn btn-primary col-md-6 col-xs-12" id="btnContactUs">
+									<br class="hidden-lg">
+									<div class="col-md-6">
+									<button type="submit" class="btn btn-primary col-md-12" id="btnContactUs">
+										
+										
 										Mesajı Gönder
 									</button>
+									
+									</div>
 								</div>
+								
+								
+								
+								
+								
 							<% end %>
 						
 					</div>
+					
+					<br class="hidden-lg">
 					<div class="col-md-4">
 						<form>
 							<legend>
