--- a/app/views/index/risksizalisveris.html.erb
+++ b/app/views/index/risksizalisveris.html.erb
@@ -157,8 +157,13 @@
 					
 					<br>
 					
-						<div style="text-align:center;" >
-					<img src="/resources/images/risksizalisveris.jpg"  width="500px;">
+						<div class="visible-lg visible-md" style="text-align:center;" >
+					<img src="/resources/images/risksizalisveris.jpg"  width="70%">
+					
+					</div>
+					
+					<div class="visible-xs visible-sm" style="text-align:center;" >
+					<img src="/resources/images/risksizalisveris.jpg"  width="100%">
 					
 					</div>
 
