--- a/app/views/error/not_found.html.erb
+++ b/app/views/error/not_found.html.erb
@@ -18,7 +18,7 @@
 			<!--start-content------>
 			<div class="content">
 				<img src="/resources/404/images/error-img.png" title="error" />
-				<p><span><label>O</label>hooo.....</span> Her ne arıyorsan yanlış yerdesin be kardeşim!!</p>
+				<p><span><label>O</label>hooo.....</span> Her ne arıyorsan yanlış yerdesin!!</p>
 				<a href="/">Anasayfaya Dön</a>
 				<div class="copy-right">
 					<p>&copy; <a href="/">Campus İlan</a> | Üniversitelilerin ilan sitesi.</p>
