--- a/app/views/application/_loginContainer.html.erb
+++ b/app/views/application/_loginContainer.html.erb
@@ -74,7 +74,7 @@
 
 <div style="padding-right:20px;" class="hidden-xs row">
 
-	<div class="col-lg-10 col-md-10 col-sm-10">
+	<div style="margin-right:-10px;" class="col-lg-10 col-md-10 col-sm-10">
 
 		<span style="color:black;"> Hoşgeldin; <%= current_user.username %> </span>
 
