--- a/app/views/application/_loginContainer.html.erb
+++ b/app/views/application/_loginContainer.html.erb
@@ -76,7 +76,7 @@
 
 	<div style="margin-right:-10px;" class="col-lg-10 col-md-10 col-sm-10">
 
-		<span style="color:black;"> Hoşgeldin; <%= current_user.username %> </span>
+		<span style="color:black;"> Hoşgeldin; <%= current_user.name %> <%= current_user.surname %></span>
 
 		<div  style="color:black;clear: both;">
 
