--- a/app/views/application/_kullanicipaneli2.html.erb
+++ b/app/views/application/_kullanicipaneli2.html.erb
@@ -211,8 +211,7 @@
 
 	})
 
-	$("<%= @sekme %>
-		").show();
+	$("<%= @sekme %>").show();
 
 	<% if @sekme==".tekliflerim" || @sekme==".hesapayarlari" %><% end %>
 		})
