--- a/app/views/index/iletisim.html.erb
+++ b/app/views/index/iletisim.html.erb
@@ -191,7 +191,7 @@
 									</div>
 								</div>
 								<div class="row">
-									<div style="overflow:auto;" class="g-recaptcha col-md-6 " data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
+									<div style="overflow-x:auto;height:100px;" class="g-recaptcha col-md-6 " data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
 									
 									<br class="hidden-lg">
 									<div class="col-md-6">
