--- a/app/views/index/mesajlarim.html.erb
+++ b/app/views/index/mesajlarim.html.erb
@@ -89,8 +89,13 @@
 		</script>
 
 		<!-- end of plugins  -->
+		
+		
+		
 
 		<style>
+		
+		
 			
 
 			body {
@@ -156,7 +161,7 @@
 
 			<!-- Include all compiled plugins (below), or include individual files
 			as needed -->
-			<script src="/resources/js/bootstrap.min.js"></script>
+			<script src="/resources/js/bootstrap.js"></script>
 
 			<div class="visible-xs visible-sm row" style="margin-bottom: 10px;">
 
@@ -242,6 +247,7 @@
 											<th>Kullanıcı Adı</th>
 											<th>Tarih</th>
 											<th style="display:none;">Mesaj Id</th>
+											<th>Göster</th>
 											<th>Cevapla</th>
 											<th>Sil</th>
 
@@ -264,6 +270,15 @@
 												<td><%= mesaj.from.username %></td>
 												<td><%= mesaj.created_at %></td>
 												<td style="display:none;"><%= mesaj.id %></td>
+												
+												<td>
+												<p data-placement="top" data-toggle="tooltip"
+												title="Göster">
+													<button class="btn btn-primary btn-xs <%= mesaj.id %>" data-title="Göster"
+													data-toggle="modal" data-target="#mesajgoster">
+														<span class="glyphicon glyphicon-envelope"></span>
+													</button>
+												</p></td>
 
 												<td>
 												<p data-placement="top" data-toggle="tooltip"
@@ -291,20 +306,34 @@ $(".<%= mesaj.id %>").click(function() {
 	$(".cevaplapaneli .ickisim").val("<%= mesaj.from.username %>");
 	
 	
+	$(".silpaneli .mesajfromid").val("<%= mesaj.id %>");
 	
+	$(".gosterpaneli .ickisim").attr("placeholder", "<%= mesaj.from.username %>");
+	
+	
+	 $(".gosterpaneli .ickisim").val("<%= mesaj.from.username %>");
+	 
+	 
+	 
+	  $(".gosterpaneli .ickisim2").attr("placeholder", "<%= mesaj.topic %>");
+	
+	
+	 $(".gosterpaneli .ickisim2").val("<%= mesaj.topic %>");
+	 
+	 $(".gosterpaneli .ickisim3").attr("placeholder", "<%= mesaj.topic %>");
+	
+	
+	 $(".gosterpaneli .ickisim3").val("<%= mesaj.text %>");
+	 
 	 
 	
 	});
 
-	$(".<%= mesaj.id %>").click(function() {
-
-	$(".silpaneli .mesajfromid").val("<%= mesaj.id %>");
 	
 	
 	
 	
-
-	});
+	
 
 												</script>
 
@@ -328,6 +357,15 @@ $(".<%= mesaj.id %>").click(function() {
 												<td><%= mesaj.to.username %></td>
 												<td><%= mesaj.created_at %></td>
 												<td style="display:none;"><%= mesaj.id %></td>
+												
+												<td>
+												<p data-placement="top" data-toggle="tooltip"
+												title="Göster">
+													<button class="btn btn-primary btn-xs <%= mesaj.id %>" data-title="Göster"
+													data-toggle="modal" data-target="#mesajgoster">
+														<span class="glyphicon glyphicon-envelope"></span>
+													</button>
+												</p></td>
 
 												<td>
 												<p data-placement="top" data-toggle="tooltip"
@@ -355,6 +393,24 @@ $(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
 	$(".cevaplapaneli .ickisim").val("<%= mesaj.to.username %>");
 	
 	$(".silpaneli .mesajtoid").val("<%= mesaj.id %>");
+	
+	$(".gosterpaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
+	
+	
+	 $(".gosterpaneli .ickisim").val("<%= mesaj.to.username %>");
+	 
+	 $(".gosterpaneli .ickisim2").attr("placeholder", "<%= mesaj.topic %>");
+	
+	
+	 $(".gosterpaneli .ickisim2").val("<%= mesaj.topic %>");
+	 
+	 $(".gosterpaneli .ickisim3").attr("placeholder", "<%= mesaj.topic %>");
+	
+	
+	 $(".gosterpaneli .ickisim3").val("<%= mesaj.text %>");
+	
+	
+	
 
 	});
 
@@ -424,7 +480,7 @@ $(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
 
 											</div>
 											
-											<div style="margin-left: 20px;" id="recaptcha1"></div>
+											<div  id="recaptcha1"></div>
 										
 										</div>
 										<div class="modal-footer ">
@@ -444,6 +500,71 @@ $(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
 							</div>
 
 							<% end %>
+							
+							
+							
+							
+							
+							<div class="gosterpaneli modal fade" id="mesajgoster" tabindex="-1" role="dialog"
+							aria-labelledby="Göster" aria-hidden="true">
+								<div class="modal-dialog">
+									<div class="modal-content">
+										<div class="modal-header">
+											<button type="button" class="close" data-dismiss="modal"
+											aria-hidden="true">
+												<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+											</button>
+											<h4 class="modal-title custom_align" id="Heading">Mesaj İçeriği</h4>
+
+											<br>
+
+											
+										</div>
+										<div class="modal-body">
+											
+											
+											
+											<div class="form-group">
+												
+
+												<input type="text" placeholder="Kullanıcı Adı" class="form-control kullaniciadi ickisim" readonly="true" >
+
+											</div>
+											<div class="form-group">
+
+												
+
+												<input type="text" placeholder="Konu" class="konu ickisim2 form-control" readonly="true">			
+
+											</div>
+											<div class="form-group">
+												
+												
+												<textarea  class="ickisim3 form-control" placeholder="Mesaj İçeriği" rows="5" readonly="true"> </textarea>
+
+											</div>
+											
+											
+										
+										</div>
+										<div class="modal-footer ">
+											
+
+											<button type="button" class=" btn btn-warning btn-lg"
+											style="width: 100%;" data-dismiss="modal">
+												<span class="glyphicon glyphicon-ok-sign"></span> Kapat
+											</button>
+										</div>
+									</div>
+									<!-- /.modal-content -->
+								</div>
+								<!-- /.modal-dialog -->
+							</div>
+							
+							
+							
+							
+							
 
 							<%= form_for :mesaj, :url => 'mesajgonder',:html => {id: 'mesajgonderformu'} do |m| %>
 
@@ -479,7 +600,7 @@ $(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
 
 											</div>
 											
-											<div style="margin-left: 20px;" id="recaptcha2"></div>
+											<div  id="recaptcha2"></div>
 										</div>
 										
 										<div style="margin-left: 20px"class="g-recaptcha" data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
@@ -630,6 +751,7 @@ $(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
 										<th>Kullanıcı Adı</th>
 
 										<th style="display:none;">Mesaj Id</th>
+										<th>Göster</th>
 										<th>Cevapla</th>
 										<th>Sil</th>
 
@@ -652,6 +774,15 @@ $(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
 											<td><%= mesaj.from.username %></td>
 
 											<td style="display:none;"><%= mesaj.id %></td>
+											
+											<td>
+												<p data-placement="top" data-toggle="tooltip"
+												title="Göster">
+													<button class="btn btn-primary btn-xs <%= mesaj.id %>" data-title="Göster"
+													data-toggle="modal" data-target="#mesajgoster2">
+														<span class="glyphicon glyphicon-envelope"></span>
+													</button>
+												</p></td>
 
 											<td>
 											<p data-placement="top" data-toggle="tooltip"
@@ -678,13 +809,35 @@ $(".<%= mesaj.id %>").click(function() {
 												$(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.from.username %>");
 
 	$(".cevaplapaneli .ickisim").val("<%= mesaj.from.username %>");
-	});
-
-	$(".<%= mesaj.id %>").click(function() {
+	
 
 	$(".silpaneli .mesajfromid").val("<%= mesaj.id %>");
-
+	
+	
+	
+	 $(".gosterpaneli .ickisim").attr("placeholder", "<%= mesaj.from.username %>");
+	
+	
+	 $(".gosterpaneli .ickisim").val("<%= mesaj.from.username %>");
+	 
+	 $(".gosterpaneli .ickisim2").attr("placeholder", "<%= mesaj.topic %>");
+	
+	
+	 $(".gosterpaneli .ickisim2").val("<%= mesaj.topic %>");
+	 
+	 $(".gosterpaneli .ickisim3").attr("placeholder", "<%= mesaj.topic %>");
+	
+	
+	 $(".gosterpaneli .ickisim3").val("<%= mesaj.text %>");
+	
+	
 	});
+
+	
+
+
+
+	
 
 											</script>
 
@@ -708,6 +861,15 @@ $(".<%= mesaj.id %>").click(function() {
 											<td><%= mesaj.to.username %></td>
 
 											<td style="display:none;"><%= mesaj.id %></td>
+											
+											<td>
+												<p data-placement="top" data-toggle="tooltip"
+												title="Göster">
+													<button class="btn btn-primary btn-xs <%= mesaj.id %>" data-title="Göster"
+													data-toggle="modal" data-target="#mesajgoster2">
+														<span class="glyphicon glyphicon-envelope"></span>
+													</button>
+												</p></td>
 
 											<td>
 											<p data-placement="top" data-toggle="tooltip"
@@ -733,14 +895,28 @@ $(".<%= mesaj.id %>").click(function() {
 	$(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
 
 	$(".cevaplapaneli .ickisim").val("<%= mesaj.to.username %>");
-
-	});
-
-	$(".<%= mesaj.id %>").click(function() {
-
+	
 	$(".silpaneli .mesajtoid").val("<%= mesaj.id %>");
+	
+	$(".gosterpaneli .ickisim").attr("placeholder", "<%= mesaj.to.username %>");
+	
+	
+	 $(".gosterpaneli .ickisim").val("<%= mesaj.to.username %>");
+	 
+	 
+	 $(".gosterpaneli .ickisim2").attr("placeholder", "<%= mesaj.topic %>");
+	
+	
+	 $(".gosterpaneli .ickisim2").val("<%= mesaj.topic %>");
+	 
+	 $(".gosterpaneli .ickisim3").attr("placeholder", "<%= mesaj.topic %>");
+	
+	
+	 $(".gosterpaneli .ickisim3").val("<%= mesaj.text %>");
 
 	});
+
+	
 
 											</script>
 
@@ -803,7 +979,7 @@ $(".<%= mesaj.id %>").click(function() {
 
 										</div>
 										
-										<div style="margin-left: 20px;" id="recaptcha3"></div>
+										<div style="overflow:hidden;" id="recaptcha3"></div>
 									</div>
 									<div class="modal-footer ">
 										<button onclick="mesajcevapla2()" type="button" class="gonderbutonu btn btn-warning btn-lg"
@@ -853,7 +1029,7 @@ $(".<%= mesaj.id %>").click(function() {
 
 										</div>
 										
-										<div style="margin-left: 20px;" id="recaptcha4"></div>
+										<div style="overflow:hidden;" id="recaptcha4"></div>
 									</div>
 									<div class="modal-footer ">
 										<button onclick="mesajgonder2()" type="button" class="gonderbutonu btn btn-warning btn-lg"
@@ -868,6 +1044,66 @@ $(".<%= mesaj.id %>").click(function() {
 						</div>
 
 						<% end %>
+						
+						
+						
+						<div class="gosterpaneli modal fade" id="mesajgoster2" tabindex="-1" role="dialog"
+							aria-labelledby="Göster" aria-hidden="true">
+								<div class="modal-dialog">
+									<div class="modal-content">
+										<div class="modal-header">
+											<button type="button" class="close" data-dismiss="modal"
+											aria-hidden="true">
+												<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+											</button>
+											<h4 class="modal-title custom_align" id="Heading">Mesaj İçeriği</h4>
+
+											<br>
+
+											
+										</div>
+										<div class="modal-body">
+											
+											
+											
+											<div class="form-group">
+												
+
+												<input type="text" placeholder="Kullanıcı Adı" class="form-control kullaniciadi ickisim" readonly="true" >
+
+											</div>
+											<div class="form-group">
+
+												
+
+												<input type="text" placeholder="Konu" class="konu ickisim2 form-control" readonly="true">			
+
+											</div>
+											<div class="form-group">
+												
+												
+												<textarea  class="ickisim3 form-control" placeholder="Mesaj İçeriği" rows="5" readonly="true"> </textarea>
+
+											</div>
+											
+											
+										
+										</div>
+										<div class="modal-footer ">
+											
+
+											<button type="button" class=" btn btn-warning btn-lg"
+											style="width: 100%;" data-dismiss="modal">
+												<span class="glyphicon glyphicon-ok-sign"></span> Kapat
+											</button>
+										</div>
+									</div>
+									<!-- /.modal-content -->
+								</div>
+								<!-- /.modal-dialog -->
+							</div>
+						
+						
 
 						<%= form_for :mesaj, :url => 'mesajsil',:html => {id: 'mesajsilformu2'} do |m| %>
 
@@ -1418,62 +1654,6 @@ $(".<%= mesaj.id %>").click(function() {
 				
 				
 				
-				$modaljquery("#mesajgonder").on('show.bs.modal', function() {
-					
-					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
-					
-
-				});
-			
-			
-				$modaljquery("#mesajgonder").on('hidden.bs.modal', function() {
-					
-					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
-					
-					
-
-				});
-				
-				$modaljquery("#mesajgonder2").on('show.bs.modal', function() {
-					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
-				});
-
-				$modaljquery("#mesajgonder2").on('hidden.bs.modal', function() {
-					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
-				});
-				
-				$modaljquery("#mesajcevapla").on('show.bs.modal', function() {
-					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
-				});
-				
-				$modaljquery("#mesajcevapla").on('hidden.bs.modal', function() {
-					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
-				});
-				
-				$modaljquery("#mesajcevapla2").on('show.bs.modal', function() {
-					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
-				});
-
-				$modaljquery("#mesajcevapla2").on('hidden.bs.modal', function() {
-					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
-				});
-				
-				$modaljquery("#mesajsil").on('show.bs.modal', function() {
-					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
-				});
-
-				$modaljquery("#mesajsil").on('hidden.bs.modal', function() {
-					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
-				});
-				
-				$modaljquery("#mesajsil2").on('show.bs.modal', function() {
-					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
-				});
-
-				$modaljquery("#mesajsil2").on('hidden.bs.modal', function() {
-					$("body").css({"overflow-y":"hidden","height":"100%","margin-right":"0px"});
-				});
-
 			</script>
 			
 			
