--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -64,7 +64,7 @@
 					<a href="/yardim?hizmetsatinalma=1">Nasıl Ürün Satın Alırım?</a>
 				</li>
 				<li>
-					<a href="kullanimkosullari">Kullanım Koşulları</a>
+					<a href="/kullanimkosullari">Kullanım Koşulları</a>
 				</li>
 				<li>
 					<a href="/yardim">Daha Fazla Yardım</a>
