--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -263,7 +263,9 @@
 						-Kullanım Koşulları için <a href="/kullanimkosullari">buraya</a> tıklayınız.<br><br>
 						
 						-Sitemizin işleyişiyle ilgili bilgi mi almak istiyorsunuz? <a href="">Buraya</a> tıklayın.<br><br>
-						&nbsp;Ya da yardıma mı ihtiyacınız var? O zaman <a href="/yardim">buraya</a> tıklayın. <br />
+						-Üye oldunuz ve aktivasyon e-postası gelmedi mi? O zaman <a href="/aktivasyon" >buraya</a> tıklayınız.
+						
+						&nbsp;Hala daha yardıma mı ihtiyacınız var? O zaman <a href="/yardim">buraya</a> tıklayın. <br />
 						<br>
 						
 						<img class="img-responsive" width="200px" src="/resources/images/login-icon.png" >
