--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -119,7 +119,9 @@
 
 		<div class="container-fluid">
 
-			<div class="visible-xs visible-sm row" style="margin-bottom: 10px;">
+			<div class="row" style="position: relative;margin-bottom: 10px;">
+
+				
 
 				<div id="loginkismi "  class="visible-xs ">
 					<!-- Login Starts Here -->
@@ -259,9 +261,8 @@
 
 										<div style="display: none;"
 										class="col-xs-12 col-sm-12 hidden-lg hidden-md form-group  karakterhatasi label label-danger">
-											Lütfen
-											sadece harfleri(a-z),rakamları ve "." "-" "_" karakterlerini
-											giriniz.
+											
+											Sadece türkçe olmayan harfleri(a-z),rakamları ve &nbsp;  .&nbsp;  -&nbsp;  _&nbsp; karakterlerini girebilirsiniz.
 										</div>
 
 										<div style="display: none;"
@@ -298,9 +299,7 @@
 
 										<div style="display: none;"
 										class="col-lg-12 col-md-12 hidden-xs hidden-sm form-group  karakterhatasi label label-danger">
-											Lütfen
-											sadece harfleri(a-z),rakamları ve "." "-" "_" karakterlerini
-											giriniz.
+											Sadece türkçe olmayan harfleri(a-z),rakamları ve &nbsp;  .&nbsp;  -&nbsp;  _&nbsp; karakterlerini girebilirsiniz.
 										</div>
 
 										<div style="display: none;"
@@ -681,7 +680,7 @@
 
 								<div class="row">
 									
-									<div class="g-recaptcha" data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
+									<div style="overflow:hidden" class="g-recaptcha" data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
 									
 									<br>
 							
