--- a/app/views/user_mailer/forgot_password.html.erb
+++ b/app/views/user_mailer/forgot_password.html.erb
@@ -17,7 +17,7 @@
 	<p>	Şifrenizi unuttuğunuzu söylediniz.O zaman hemen size yardımcı olalım </p> 
 
 	
-	<p> Yeni şifre oluşturmak için <a href="http://www.campusilan.com/sifremiunuttum">buraya</a> tıklayınız.</p>
+	<p> Yeni şifre oluşturmak için <a href="http://www.campusilan.com/forgot?user=<%= @user.username %>&token=<%= @user.confirm_token %>">buraya</a> tıklayınız.</p>
 		
 		
 
