--- a/app/views/user/aktivasyon.html.erb
+++ b/app/views/user/aktivasyon.html.erb
@@ -99,6 +99,7 @@
 			}
 
 		</style>
+		<script src='https://www.google.com/recaptcha/api.js'></script>
 
 	</head>
 
@@ -161,6 +162,8 @@
 									<input class="form-control" type="text" id="" name="eposta" placeholder="E-posta adresinizi giriniz.">
 								</div>
 								<br />
+								<div class="g-recaptcha" data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
+								<br>
 								<input type="submit" value="Gönder" class="btn btn-large btn-primary" />
 							
 								<% end %>
