--- a/app/views/user/sifremiunuttum.html.erb
+++ b/app/views/user/sifremiunuttum.html.erb
@@ -154,14 +154,14 @@
 
 							<br>
 
-							<form action="" method="post">
+							<%= form_tag '/sifremiunuttum' do %>
 								<div class="input-group">
 									<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-									<input class="form-control" type="text" id="" name="" placeholder="E-posta adresinizi giriniz.">
+									<input class="form-control" type="text"  name="eposta" placeholder="E-posta adresinizi giriniz.">
 								</div>
 								<br />
 								<input type="submit" value="Gönder" class="btn btn-large btn-primary" />
-							</form>
+							<% end %>
 						</div>
 
 						<div class="visible-lg  visible-md col-lg-5 col-md-5 col-md-offset-1 col-lg-offset-1">
