--- a/app/views/advert_mailer/ilanekleme.html.erb
+++ b/app/views/advert_mailer/ilanekleme.html.erb
@@ -16,7 +16,7 @@
 
 	
 	
-	<p>Bu süreçte size yaşattığımız gecikme için özür dileriz. İlanınız onaylanma sürecinde iken diğer ilanlara göz atabilir ve sitemizim tadını çıkarabilirsiniz :)</p>
+	<p>Bu süreçte size yaşattığımız gecikme için özür dileriz. İlanınız onaylanma sürecinde iken diğer ilanlara göz atabilir ve sitemizin tadını çıkarabilirsiniz :)</p>
 	<br><br>
 
 
