--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -578,7 +578,7 @@
 
 							</div>
 
-							<div style="" class=" col-lg-6 col-md-6 ">
+							<div style="padding:30px;" class=" col-lg-6 col-md-6 ">
 
 								<div style="overflow: auto; height: 400px;" class="termsconditions row">
 
