--- a/app/views/user/sifredegistir.html.erb
+++ b/app/views/user/sifredegistir.html.erb
@@ -143,23 +143,31 @@
 				<div >
 					<div class="row">
 						<div class="col-lg-6 col-md-6" >
-							<h2>Hesap Aktivasyonu</h2>
+							<h2>Şifre Değiştirme</h2>
 
 							<p>
-								Eğer kayıt olduktan sonra aktivasyon e-postası gelmediyse doğru yerdesiniz.
+								Şifrenizi değiştirmek için yeni şifrenizi iki kere giriniz.
 							</p>
-							<p>
-								Aktivasyon e-postasını yollayabileceğimiz e-posta adresinizi aşağıya yazınız ve göndere basınız.
-							</p>
+							
 
 							<br>
 
 								<%= form_tag '/aktivasyon', :id => 'loginform', :class => 'form-horizontal', :role => 'form' do  %>
 
+								
+								
+								
 								<div class="input-group">
-									<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-									<input class="form-control" type="text" id="" name="eposta" placeholder="E-posta adresinizi giriniz.">
+									<span class="input-group-addon"><span class="glyphicon glyphicon glyphicon-check"></span></span>
+									<input class="form-control" type="text" id="" name="eposta" placeholder="Yeni Şifreniz.">
 								</div>
+								<br>
+								
+								<div class="input-group">
+									<span class="input-group-addon"><span class="glyphicon glyphicon glyphicon-check"></span></span>
+									<input class="form-control" type="text" id="" name="eposta" placeholder="Yeni Şifrenizi tekrar girin.">
+								</div>
+								
 								<br />
 								<input type="submit" value="Gönder" class="btn btn-large btn-primary" />
 							
@@ -169,7 +177,7 @@
 
 						<div class="visible-lg  visible-md col-lg-5 col-md-5 col-md-offset-1 col-lg-offset-1">
 
-							<img class="img-responsive" width="40%;"  src="/resources/images/activate.png" >
+							<img class="img-responsive" width="40%;"  src="/resources/images/password.png" >
 
 						</div>
 					</div>
@@ -185,7 +193,7 @@
 
 		</div>
 		
-		<% if params[:gecersiz] %>
+		<% if params[:basarisiz] %>
 		
 		<div class = "hata modal fade" id = "myModal" tabindex = "-1" role = "dialog" aria-labelledby = "myModalLabel" aria-hidden = "true">
 
@@ -201,7 +209,7 @@
 					</div>
 
 					<div class = "modal-body">
-						Girdiğiniz e-posta adresi geçersiz yada sistemimizde kayıtlı değil.Lütfen geçerli bir e-posta adresi giriniz!!
+						Girdiğiniz şifreler uyuşmuyor ya da geçerli değil.
 					</div>
 
 					<div class = "modal-footer">
