--- a/app/views/application/_ikincielform.html.erb
+++ b/app/views/application/_ikincielform.html.erb
@@ -21,7 +21,7 @@
 	<div class="col-sm-10">
 		<%= field.select :category, [['Beyaz Eşya', 'beyazesya'], ['Ev Dekorasyonu',
         'evdekorasyonu'], ['Müzik Aletleri', 'muzikaletleri'], ['Elektronik', 'elektronik'], ['Kırtasiye', 'kirtasiye'],
-      ['Mutfak Eşyaları', 'mutfakesyalari'], ['Vasıta', 'vasita'],['Giyim', 'giyim'],['Ders Notu', 'dersnotu'], ['İncik Boncuk', 'incikboncuk'], ['Diğer', 'diger']],{}, {:class => " form-control"}  %>
+      ['Mutfak Eşyaları', 'mutfakesyalari'], ['Vasıta', 'vasita'],['Giyim', 'giyim'],['Ders Notu', 'dersnotu'], ['Takı-Mücevher', 'takimucevher'], ['Diğer', 'diger']],{}, {:class => " form-control"}  %>
 
 	</div>
 </div>
@@ -55,7 +55,7 @@
 
 	<div class = "col-sm-10">
 		<%= field.select :color, [['Renk Seçiniz', ''],['Siyah', 'siyah'], ['Beyaz', 'beyaz'], ['Kırmızı','kirmizi'],
-		['Mavi', 'mavi'], ['Sarı', 'sari'], ['Yeşil', 'yesil']],{}, {class: "form-control"}  %>
+		['Mavi', 'mavi'], ['Sarı', 'sari'], ['Yeşil', 'yesil'],['Mor', 'mor'],['Pembe', 'pembe'],['Altın Rengi', 'altin'],['Turuncu', 'turuncu'],['Diğer', 'diger2']],{}, {class: "form-control"}  %>
 	</div>
 </div>
 
