--- a/app/views/index/aramasonuclari.html.erb
+++ b/app/views/index/aramasonuclari.html.erb
@@ -414,7 +414,7 @@
 		<div class="panel-body">
 		<%= select_tag :altkategori,options_for_select([['Kategori Seçiniz', 'hepsi'],['Beyaz Eşya', 'beyazesya'], ['Ev Dekorasyonu',
         'evdekorasyon'], ['Müzik Aletleri', 'muzikaletleri'], ['Elektronik', 'elektronik'], ['Kırtasiye', 'kirtasiye'],
-      ['Mutfak Eşyaları', 'mutfakesyalari'], ['Vasıta', 'vasita'],['Giyim', 'giyim'],['Ders Notu', 'dersnotu'], ['İncik Boncuk', 'incikboncuk'], ['Diğer', 'diger']],params[:altkategori]), :class => 'form-control'  %>
+      ['Mutfak Eşyaları', 'mutfakesyalari'], ['Vasıta', 'vasita'],['Giyim', 'giyim'],['Kitap ve Ders Notu', 'kitapdersnotu'], ['İncik Boncuk', 'incikboncuk'], ['Diğer', 'diger']],params[:altkategori]), :class => 'form-control'  %>
 		</div>
 
 		</div>
