--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -316,7 +316,7 @@
 							</div>
 
 							<div class="panel-body">
-								<a style="margin-left:10px;" href="/kategoriler/ikincielilan/dersnotu">-Ders Notu </a>
+								<a style="margin-left:10px;" href="/kategoriler/ikincielilan/kitapdersnotu">-Kitap ve Ders Notu </a>
 							</div>
 
 							<div class="panel-body">
