--- a/app/views/advert/kategoriler.html.erb
+++ b/app/views/advert/kategoriler.html.erb
@@ -193,10 +193,6 @@
 												</li>
 
 												<li>
-													<a href="/kategoriler/ikincielilan/dersnotu">Ders Notu</a>
-												</li>
-
-												<li>
 													<a href="/kategoriler/ikincielilan/elektronik">Elektronik</a>
 												</li>
 
@@ -221,6 +217,10 @@
 												<li>
 													<a href="/kategoriler/ikincielilan/kirtasiye">Kırtasiye</a>
 
+												</li>
+												
+												<li>
+													<a href="/kategoriler/ikincielilan/kitapdersnotu">Kitap ve Ders Notu</a>
 												</li>
 
 												<li>
