--- a/app/views/application/_ikincielform.html.erb
+++ b/app/views/application/_ikincielform.html.erb
@@ -21,7 +21,7 @@
 	<div class="col-sm-10">
 		<%= field.select :category, [['Beyaz Eşya', 'beyazesya'], ['Ev Dekorasyonu',
         'evdekorasyonu'], ['Müzik Aletleri', 'muzikaletleri'], ['Elektronik', 'elektronik'], ['Kırtasiye', 'kirtasiye'],
-      ['Mutfak Eşyaları', 'mutfakesyalari'], ['Vasıta', 'vasita'],['Giyim', 'giyim'],['Ders Notu', 'dersnotu'], ['İncik Boncuk', 'incikboncuk'], ['Diğer', 'diger']],{}, {:class => " form-control"}  %>
+      ['Mutfak Eşyaları', 'mutfakesyalari'], ['Vasıta', 'vasita'],['Giyim', 'giyim'],['Kitap ve Ders Notu', 'kitapdersnotu'], ['İncik Boncuk', 'incikboncuk'], ['Diğer', 'diger']],{}, {:class => " form-control"}  %>
 
 	</div>
 </div>
