--- a/app/views/advert/kategoriler.html.erb
+++ b/app/views/advert/kategoriler.html.erb
@@ -210,11 +210,6 @@
 											<h4>H-P</h4>
 											<ul>
 												<li>
-													<a href="/kategoriler/ikincielilan/incikboncuk">İncik Boncuk</a>
-
-												</li>
-
-												<li>
 													<a href="/kategoriler/ikincielilan/kirtasiye">Kırtasiye</a>
 
 												</li>
@@ -238,6 +233,10 @@
 										<div>
 											<h4>P-Z</h4>
 											<ul>
+												<li>
+													<a href="/kategoriler/ikincielilan/takimucevher">Takı-Mücevher</a>
+
+												</li>
 												<li>
 													<a href="/kategoriler/ikincielilan/vasita">Vasıta</a>
 
