--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -320,7 +320,7 @@
 							</div>
 
 							<div class="panel-body">
-								<a style="margin-left:10px;" href="/kategoriler/ikincielilan/incikboncuk">-İncik Boncuk </a>
+								<a style="margin-left:10px;" href="/kategoriler/ikincielilan/takimucevher">-Takı-Mücevher</a>
 							</div>
 
 							<div class="panel-body">
