--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -216,9 +216,9 @@
 
 			<div class="row" style="position: relative;margin-bottom: 10px;">
 
-				<div class="hidden-xs col-sm-8 ">
+			<!--	<div class="hidden-xs col-sm-8 ">
 					<a><img class="img-responsive" src="resources/images/asdasd.jpg"  ></a>
-				</div>
+			</div> -->
 
 				<div id="loginkismi "  class="visible-xs ">
 					<!-- Login Starts Here -->
@@ -1761,44 +1761,7 @@
 			</div>
 
 		</div>
-
-		<div style=" margin-top:20px;"  class="row">
-
-			<div class = "container-fluid">
-
-				<div data-step="7" data-intro="Son olarak daha ayrıntılı bilgiye ve yardıma mı ihtiyacınız var? O zaman bu kısım tam size göre :)" style="padding:10px;background-color:#9DD2E3;"  id="campusilanbilgi" class = "jumbotron">
-
-					<h1>Campus İlan ile neler yapabilirsiniz?</h1>
-					<p>
-						Campus İlan üniversitelilere özel ilan sitesidir.
-						<br>
-
-						<hr style="border-color:black;">
-
-						-Campus ilan ile ikinci el ilanı oluşturabilir,ders notu,özel ders ve ev arkadaşı ilanlarınızı paylaşabilirsiniz
-						<br>
-						<br>
-						Tabii ki üniversiteli olmak şartıyla!!
-						<br>
-						-Sadece ilanı açanın telefon numarası veya e-posta adresi bilgileri ile üye olmaya gerek kalmadan ilan sahibi ile irtibata geçin.
-						<br>
-						<br>
-						-Hepsi tamamen ücretsiz ve kullanıcı dostu bir arayüzle!!
-						<br>
-						<br>
-						-Hala daha yardıma mı ihtiyacınız var? Sizi <a href="/yardim" >böyle</a> alalım.
-					</p>
-
-					<p>
-						<a href="/ilanver" class = "hidden-xs hidden-sm btn btn-primary btn-lg" role = "button">Hemen İlan paylaşmaya başlayın</a>
-						<a href="/ilanver" class = "visible-xs visible-sm btn btn-primary btn-lg" role = "button">Hemen İlan paylaşın</a>
-					</p>
-				</div>
-
-			</div>
-
-		</div>
-
+		
 		<div class="visible-xs " style="margin-top: 30px;" >
 
 			<div class = "panel panel-info">
@@ -1856,6 +1819,46 @@
 			</div>
 
 		</div>
+		
+
+		<div style=" margin-top:20px;"  class="row">
+
+			<div class = "container-fluid">
+
+				<div data-step="7" data-intro="Son olarak daha ayrıntılı bilgiye ve yardıma mı ihtiyacınız var? O zaman bu kısım tam size göre :)" style="padding:10px;background-color:#9DD2E3;"  id="campusilanbilgi" class = "jumbotron">
+
+					<h1>Campus İlan ile neler yapabilirsiniz?</h1>
+					<p>
+						Campus İlan üniversitelilere özel ilan sitesidir.
+						<br>
+
+						<hr style="border-color:black;">
+
+						-Campus ilan ile ikinci el ilanı oluşturabilir,ders notu,özel ders ve ev arkadaşı ilanlarınızı paylaşabilirsiniz
+						<br>
+						<br>
+						Tabii ki üniversiteli olmak şartıyla!!
+						<br>
+						-Sadece ilanı açanın telefon numarası veya e-posta adresi bilgileri ile üye olmaya gerek kalmadan ilan sahibi ile irtibata geçin.
+						<br>
+						<br>
+						-Hepsi tamamen ücretsiz ve kullanıcı dostu bir arayüzle!!
+						<br>
+						<br>
+						-Hala daha yardıma mı ihtiyacınız var? Sizi <a href="/yardim" >böyle</a> alalım.
+					</p>
+
+					<p>
+						<a href="/ilanver" class = "hidden-xs hidden-sm btn btn-primary btn-lg" role = "button">Hemen İlan paylaşmaya başlayın</a>
+						<a href="/ilanver" class = "visible-xs visible-sm btn btn-primary btn-lg" role = "button">Hemen İlan paylaşın</a>
+					</p>
+				</div>
+
+			</div>
+
+		</div>
+
+		
 		
 		<div class="row visible-xs">
 
