--- a/app/views/application/_evarkadasiform.html.erb
+++ b/app/views/application/_evarkadasiform.html.erb
@@ -145,7 +145,7 @@
 	</div>
 </div>
 
-<div id="recaptcha2"></div>
+<div style="overflow:hidden;" id="recaptcha2"></div>
 <br>
 <div class = "row form-group">
 	<div class = " col-sm-10">
