--- a/app/views/application/_ikincielform.html.erb
+++ b/app/views/application/_ikincielform.html.erb
@@ -118,7 +118,7 @@
 	</div>
 </div>
 
-<div id="recaptcha1"></div>
+<div style="overflow:hidden;" id="recaptcha1"></div>
 <br>
 <div class = "row form-group">
 	<div class = " col-sm-10">
