--- a/app/views/application/_ozeldersform.html.erb
+++ b/app/views/application/_ozeldersform.html.erb
@@ -120,7 +120,7 @@
 	</div>
 </div>
 
-<div id="recaptcha3"></div>
+<div style="overflow:hidden;" id="recaptcha3"></div>
 <br>
 <div class = "row form-group">
 	<div class = " col-sm-10">
